Fixed to display assets in grids

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="game-container">
     <header class="game-header">
         <h1>🍥 Naruto's Pathfinder 🍥</h1>
-        <p class="subtitle">Help Naruto find the fastest path to become Hokage!</p>
+        <p class="subtitle">Help Naruto find the fastest path to defeat Madara!</p>
     </header>
 
     <main class="game-main">
@@ -61,7 +61,7 @@
                     </div>
                     <div class="legend-item">
                         <div class="legend-box end-node"></div>
-                        <span>Hokage Office (End)</span>
+                        <span>Madara (End)</span>
                     </div>
                     <div class="legend-item">
                         <div class="legend-box wall-node"></div>
@@ -73,7 +73,7 @@
                     </div>
                     <div class="legend-item">
                         <div class="legend-box path-node"></div>
-                        <span>Ninja Path</span>
+                        <span>Attack Path</span>
                     </div>
                 </div>
             </div>
@@ -93,7 +93,7 @@
 <!-- JavaScript Files -->
 <script src="js/classes/Node.js"></script>
 <script src="js/classes/Grid.js"></script>
-<script src="js/classes/AStar.js"></script>
+<script src="js/classes/Astar.js"></script>
 <script src="js/utils/helpers.js"></script>
 <script src="js/ui/gridRenderer.js"></script>
 <script src="js/ui/controls.js"></script>
